--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -30,3 +30,462 @@
   year={2015},
   publisher={Oxford University Press}
 }
+
+
+@article{Townsend1994,
+abstract = {The full insurance model is tested using data from three poor, high risk villages in the semi-arid tropics of southern India. The model presented here incorporates a number of salient features of the actual village economies. Although the model is rejected statistically, it does provide a surprisingly good benchmark. Household consumptions comove with village average consumption. More clearly, household consumptions are not much influenced by contemporaneous own income, sickness, unemployment, or other idiosyncratic shocks, controlling for village consumption (i.e. for village level risk). There is evidence that the landless are less well insured than their village neighbors in one of the three villages.},
+author = {Townsend, Robert M.},
+doi = {10.2307/2951659},
+issn = {00129682},
+journal = {Econometrica},
+month = {may},
+number = {3},
+pages = {539},
+publisher = {The Econometric Society},
+title = {{Risk and Insurance in Village India}},
+url = {https://www.jstor.org/stable/2951659?origin=crossref},
+volume = {62},
+year = {1994}
+}
+
+@article{Altonji1992,
+abstract = {This paper uses Panel Study of Income Dynamics data on parents and their adult children to test the standard altruism model. This model predicts that, within the extended family, the distribution of consumption is independent of the distribution of resources. The authors' findings strongly reject this prediction. Copyright 1992 by American Economic Association.},
+author = {Altonji, Joseph G and Hayashi, Fumio and Kotlikoff, Laurence J},
+journal = {American Economic Review},
+number = {5},
+pages = {1177--1198},
+publisher = {American Economic Association},
+title = {{Is the Extended Family Altruistically Linked? Direct Tests Using Micro Data}},
+url = {https://ideas.repec.org/a/aea/aecrev/v82y1992i5p1177-98.html},
+volume = {82},
+year = {1992}
+}
+
+@article{Kimball1988,
+abstract = {The English Open Field System is important for economic history both in its own right and because the Open Field System set the stage for the subsequent Enclosure movement. One of the interesting debates about the Open Field System is over why with few exceptions ... $\backslash$n},
+author = {Kimball, M S},
+file = {::},
+isbn = {0002-8282},
+issn = {0002-8282},
+journal = {The American Economic Review},
+number = {1},
+pages = {224--232},
+title = {{Farmers' Cooperatives as Behavior Toward Risk}},
+url = {http://www.jstor.org/stable/10.2307/1814710{\%}5Cnpapers3://publication/uuid/87907970-E745-46C7-BB90-113BF94917D7},
+volume = {78},
+year = {1988}
+}
+
+@article{Mace1991,
+author = {Mace, Barbara J.},
+doi = {10.1086/261784},
+issn = {0022-3808},
+journal = {Journal of Political Economy},
+month = {oct},
+number = {5},
+pages = {928--956},
+title = {{Full Insurance in the Presence of Aggregate Uncertainty}},
+url = {https://www.journals.uchicago.edu/doi/10.1086/261784},
+volume = {99},
+year = {1991}
+}
+
+@article{Cochrane1991,
+author = {Cochrane, John H.},
+doi = {10.1086/261785},
+issn = {0022-3808},
+journal = {Journal of Political Economy},
+month = {oct},
+number = {5},
+pages = {957--976},
+title = {{A Simple Test of Consumption Insurance}},
+url = {https://www.journals.uchicago.edu/doi/10.1086/261785},
+volume = {99},
+year = {1991}
+}
+
+@article{Fafchamps1992,
+author = {Fafchamps, Marcel},
+doi = {10.1086/452001},
+issn = {0013-0079},
+journal = {Economic Development and Cultural Change},
+month = {oct},
+number = {1},
+pages = {147--174},
+publisher = { University of Chicago Press },
+title = {{Solidarity Networks in Preindustrial Societies: Rational Peasants with a Moral Economy}},
+url = {https://www.journals.uchicago.edu/doi/10.1086/452001},
+volume = {41},
+year = {1992}
+}
+
+@article{Fafchamps1999,
+author = {Fafchamps, Marcel},
+doi = {10.1080/09638199900000016},
+file = {::},
+issn = {0963-8199},
+journal = {The Journal of International Trade {\&} Economic Development},
+number = {3},
+pages = {257--278},
+title = {{Risk sharing and quasi-credit}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/09638199900000016},
+volume = {8},
+year = {1999}
+}
+
+@article{Cole2001,
+author = {Cole, Harold L. and Kocherlakota, Narayana R.},
+doi = {10.1111/1467-937X.00179},
+file = {::},
+issn = {0034-6527},
+journal = {Review of Economic Studies},
+month = {jul},
+number = {3},
+pages = {523--542},
+publisher = {Narnia},
+title = {{Efficient Allocations with Hidden Income and Hidden Storage}},
+url = {https://academic.oup.com/restud/article-lookup/doi/10.1111/1467-937X.00179},
+volume = {68},
+year = {2001}
+}
+
+@article{Kocherlakota1996,
+abstract = {Consumption data generally indicates that consumption risk is not perfectly diversified across individuals. This paper considers if and when imperfect diversification is a feature of efficient allocations in a symmetric information environment without commitment. It shows that if individuals are sufficiently patient, imperfect diversification is always sub-optimal in the long run; however, if individuals are not so patient, imperfect diversification is always optimal. The paper goes on to demonstrate that the way that history matters in an efficient allocation in a symmetric-information/no-commitment environment can be used to distinguish lack of commitment from other possible rationalizations of imperfect risk sharing, such as efficiency in the presence of asymmetric information.},
+author = {Kocherlakota, N. R.},
+doi = {10.2307/2297795},
+issn = {0034-6527},
+journal = {The Review of Economic Studies},
+month = {oct},
+number = {4},
+pages = {595--609},
+publisher = {Oxford University Press},
+title = {{Implications of Efficient Risk Sharing without Commitment}},
+url = {https://academic.oup.com/restud/article-lookup/doi/10.2307/2297795},
+volume = {63},
+year = {1996}
+}
+
+@article{Abraham2018,
+abstract = {We extend the model of risk sharing with limited commitment by introducing both a public and a private (unobservable and/or non-contractible) storage technology. Positive public storage relaxes future participation constraints, hence it can improve risk sharing, contrary to the case where hidden income or effort is the deep friction. The characteristics of constrained-efficient allocations crucially depend on the storage technology's return. At the steady state, if the return on storage is (i) moderately high, both assets and the consumption distribution may remain time-varying; (ii) sufficiently high, assets converge almost surely to a constant and the consumption distribution is time-invariant; (iii) equal to agents' discount rate, perfect risk sharing is self-enforcing. Agents never have an incentive to use their private storage technology, i.e. Euler inequalities are always satisfied, at the constrained-efficient allocation of our model, while this is not the case without optimal public asset accumulation. Finally, we find that, in contrast with the limited-commitment model without storage, past income affects consumption growth negatively both in our model with storage and in data from Indian villages.},
+author = {{\'{A}}brah{\'{a}}m, {\'{A}}rp{\'{a}}d and Lacz{\'{o}}, Sarolta},
+doi = {10.1093/restud/rdx061},
+isbn = {1179-1578},
+issn = {1467937X},
+journal = {Review of Economic Studies},
+keywords = {Dynamic contracts,Hidden storage,Limited commitment,Risk sharing},
+pmid = {22888280},
+title = {{Efficient risk sharing with limited commitment and storage}},
+year = {2018}
+}
+
+@article{Krueger2006,
+abstract = {Using data from the Consumer Expenditure Survey, we first document that the recent increase in income inequality in the U.S. has not been accompanied by a corresponding rise in consumption inequality. Much of this divergence is due to different trends in within-group inequality, which has increased significantly for income, but little for consumption. We then develop a simple framework that allows us to characterize analytically how within-group income inequality affects consumption inequality in a world in which agents can trade a full set of contingent consumption claims, subject to endogenous constraints emanating from the limited enforcement of intertemporal contracts. Finally, we quantitatively evaluate, in the context of a calibrated general equilibrium production economy, whether this set-up, or alternatively a standard incomplete markets model, can account for the documented stylized consumption inequality facts from the U.S. data. {\textcopyright} 2006 The Review of Economic Studies Limited.},
+author = {Krueger, Dirk and Perri, Fabrizio},
+doi = {10.1111/j.1467-937X.2006.00373.x},
+issn = {00346527},
+journal = {Review of Economic Studies},
+title = {{Does income inequality lead to consumption inequality? Evidence and theory}},
+year = {2006}
+}
+
+@article{Mazzocco2007,
+abstract = {In this paper, a formal test of intra-household commitment is derived and performed. To that end, two models of household intertemporal behaviour are developed. In both models, household members are characterized by individual preferences. In the first formulation, household decisions are always on the ex ante Pareto frontier. In the second model, the assumption of intra-household commitment required by ex ante efficiency is relaxed. It is shown that the full-efficiency household Euler equations are nested in the no-commitment Euler equations. Using this result, the hypothesis that household members can commit to future allocations of resources is tested using the Consumer Expenditure Survey. I strongly reject this hypothesis. It is also shown that the standard unitary framework is a special case of the full-efficiency model. However, if household members are not able to commit, household intertemporal behaviour cannot be characterized using the standard life-cycle model. These findings have two main implications. First, policy makers can change household behaviour by modifying the decision power of individual household members. Second, to evaluate programmes designed to improve the welfare of household members, it would be beneficial to replace the standard unitary model with a characterization of household behaviour that allows for lack of commitment. {\textcopyright} 2007 The Review of Economic Studies Limited.},
+author = {Mazzocco, Maurizio},
+doi = {10.1111/j.1467-937X.2007.00447.x},
+issn = {00346527},
+journal = {Review of Economic Studies},
+title = {{Household intertemporal behaviour: A collective characterization and a test of commitment}},
+year = {2007}
+}
+
+@article{Voena2015,
+abstract = {This paper examines how divorce laws affect couples' intertemporal choices and well-being. Exploiting panel variation in US laws, I estimate the parameters of a model of household decision-making. Household survey data indicate that the introduction of unilateral divorce in states that imposed an equal division of property is associated with higher household savings and lower female employment, implying a distortion in household assets accumulation and a transfer toward wives whose share in household resources is smaller than the one of their husband. When spouses share consumption equally, separate property or prenuptial agreements can reduce distortions and increase equity.},
+author = {Voena, Alessandra},
+doi = {10.1257/aer.20120234},
+file = {::},
+issn = {00028282},
+journal = {American Economic Review},
+month = {aug},
+number = {8},
+pages = {2295--2332},
+publisher = {American Economic Association},
+title = {{Yours, mine, and ours: Do divorce laws affect the intertemporal behavior of married couples?}},
+volume = {105},
+year = {2015}
+}
+
+@article{Kehoe2002,
+abstract = {Backus, Kehoe, and Kydland (1992), Baxter and Crucini (1995), and Stockman and Tesar (1995) find two major discrepancies between standard international business cycle models with complete markets and the data: In the models, cross-country correlations are much higher for consumption than for output, while in the data the opposite is true; and cross-country correlations of employment and investment are negative, while in the data they are positive. This paper introduces a friction into a standard model that helps resolve these anomalies. The friction is that international loans are imperfectly enforceable; any country can renege on its debts and suffer the consequences for future borrowing. To solve for equilibrium in this economy with endogenous incomplete markets, the methods of Marcet and Marimon (1999) are extended. Incorporating the friction helps resolve the anomalies more than does exogenously restricting the assets that can be traded.},
+author = {Kehoe, Patrick J. and Perri, Fabrizio},
+doi = {10.1111/1468-0262.00314},
+issn = {00129682},
+journal = {Econometrica},
+keywords = {Credit markets imperfections,Debt constraints,Limited enforcement,Sovereign debt},
+title = {{International business cycles with endogenous incomplete markets}},
+year = {2002}
+}
+
+@misc{Mazzocco2012,
+abstract = {We propose a method that enables one to test efficient risk sharing even when households have different risk preferences. The method is composed of three tests. The first one determines whether in the data households have homogeneous risk preferences. The second and third tests evaluate efficient risk sharing when the hypothesis of homogeneous risk preferences is rejected. We use this method to test efficient risk sharing in rural India. Using the first test, we strongly reject the hypothesis of identical risk preferences. Using the second and third tests, we reject efficiency at the village but not at the caste level.},
+author = {Mazzocco, Maurizio and Saini, Shiv},
+booktitle = {American Economic Review},
+doi = {10.1257/aer.102.1.428},
+issn = {00028282},
+title = {{Testing efficient risk sharing with heterogeneous risk preferences}},
+year = {2012}
+}
+
+@article{Kurosaki2001,
+author = {Kurosaki, Takashi},
+file = {::},
+journal = {Hitotsubashi Journal of Economics},
+number = {2},
+pages = {103--117},
+title = {{Consumption Smoothing and the Structure of Risk and Time Preferences:Theory and Evidence from Village India}},
+volume = {42},
+year = {2001}
+}
+
+@article{Ambrus2014,
+abstract = {We develop a model in which connections between individuals serve as social collateral to enforce informal insurance payments. We show that: (i) The degree of insurance is governed by the expansiveness of the network, measured with the per capita number of connections that groups have with the rest of the community. "Two-dimensional" networks-like real-world networks in Peruvian villages-are sufficiently expansive to allow very good risk-sharing. (ii) In second- best arrangements, insurance is local: agents fully share shocks within, but imperfectly between endogenously emerging risk-sharing groups. We also discuss how endogenous social collateral affects our results.},
+author = {Ambrus, Attila and Mobius, Markus and Szeidl, Adam},
+doi = {10.1257/aer.104.1.149},
+issn = {00028282},
+journal = {American Economic Review},
+title = {{Consumption risk-sharing in social networks}},
+year = {2014}
+}
+
+@article{Ligon2000,
+abstract = {We examine a dynamic model of mutual insurance when households can also engage in self-insurance by storage. We assume that there is no enforcement mechanism, so that any insurance is informal and must be self-enforcing. We show that consumption allocations satisfy a modified Euler condition and that an enhanced storage technology can either improve or diminish welfare. Furthermore we show that the ex ante transfers introduced into dynamic informal insurance models recently by Gauthier et al. (Gauthier, C., Poitevin, M., and Gonz{\'{a}}lez, P. (1997). Journal of Economic Theory76, 106-144) are only used here in the first period, with the role of ex ante transfers being replaced by differential individual storage. Journal of Economic Literature Classification Numbers: C61, C73, D90, E21. {\textcopyright} 2000 Academic Press.},
+author = {Ligon, Ethan and Thomas, Jonathan P. and Worrall, Tim},
+doi = {10.1006/redy.1999.0081},
+issn = {10942025},
+journal = {Review of Economic Dynamics},
+keywords = {Limited commitment; risk sharing; storage},
+title = {{Mutual Insurance, Individual Savings, and Limited Commitment}},
+year = {2000}
+}
+
+@article{Belhaj2014,
+author = {Belhaj, Mohamed and Bourl{\`{e}}s, Renaud and Dero{\"{i}}an, Fr{\'{e}}d{\'{e}}ric},
+doi = {10.1257/mic.6.1.58},
+file = {::},
+issn = {1945-7669},
+journal = {American Economic Journal: Microeconomics},
+month = {feb},
+number = {1},
+pages = {58--90},
+title = {{Risk-Taking and Risk-Sharing Incentives under Moral Hazard}},
+url = {http://pubs.aeaweb.org/doi/10.1257/mic.6.1.58},
+volume = {6},
+year = {2014}
+}
+
+@article{Albarran2003,
+abstract = {This paper studies some empirical implications of models with limited risk sharing due to the imperfect enforceability of contracts. We test whether the amount by which public transfers reduce private transfers is affected by features of the economy, such as the variance of income and its persistence. These implications are unique to models with imperfect enforceability. We use data from Mexico collected to exaluate a public transfer programme. It included a randomised component that we exploit as a source of exogenous variation. Our results support the theoretical model in that the crowding out of private transfers is larger in villages where the variance of income is smaller.},
+author = {Albarran, Pedro and Attanasio, Orazio P.},
+doi = {10.1111/1468-0297.00112},
+issn = {00130133},
+journal = {Economic Journal},
+title = {{Limited commitment and crowding out of private transfers: Evidence from a randomised experiment}},
+year = {2003}
+}
+
+@article{Attanasio2000,
+abstract = {In this paper we study the effects of certain types of public compulsory insurance arrangements for aggregate shocks on private allocations in environments with limited commitment. We show that this type of insurance can improve the wellbeing of private situations, but it can also deteriorate it. We also describe how different characteristics of the environment affect the role of public insurance. Using data on the Mexican PROGRESA program, we document the impact that some government programs have in crowding out private transfers. (C) 2000 Elsevier Science B.V. All rights reserved.},
+author = {Attanasio, Orazio and R{\'{i}}os-Rull, Jos{\'{e}} V{\'{i}}ctor},
+journal = {European Economic Review},
+doi = {10.1016/S0014-2921(00)00034-9},
+issn = {00142921},
+title = {{Consumption smoothing in island economies: Can public insurance reduce welfare?}},
+year = {2000}
+}
+
+@article{Dizon2019,
+author = {Dizon, Felipe and Gong, Erick and Jones, Kelly},
+doi = {10.3368/jhr.55.3.0917-9077r2},
+issn = {0022-166X},
+journal = {Journal of Human Resources},
+month = {jun},
+pages = {0917--9077R2},
+publisher = {University of Wisconsin Press},
+title = {{The Effect of Promoting Savings on Informal Risk-Sharing: Experimental Evidence from Vulnerable Women in Kenya}},
+year = {2019}
+}
+
+@article{Belhaj2012,
+abstract = {We examine the impact of informal risk sharing on risk taking incentives when transfers are organized through a social network. A . bilateral partial sharing rule satisfies that neighbors share equally a part of their revenue. In such a society, correlated technologies generate interdependent risk levels. We obtain three findings. First, there is a unique and interior Nash-equilibrium risk profile, and it is in general differentiated and related to the Bonacich measure of the risk sharing network. Second, more revenue sharing enhances risk taking on average, although some agents may lower their risk level. Last, we find that under investment might often be observed. {\textcopyright} 2011 Elsevier B.V.},
+author = {Belhaj, Mohamed and Dero{\"{i}}an, Fr{\'{e}}d{\'{e}}ric},
+doi = {10.1016/j.jdeveco.2011.07.003},
+issn = {03043878},
+journal = {Journal of Development Economics},
+keywords = {Revenue sharing,Risk taking,Social networks,Strategic substitutes,Systematic risk},
+title = {{Risk taking under heterogenous revenue sharing}},
+year = {2012}
+}
+
+@article{Abraham2008,
+abstract = {We propose a tractable recursive framework to study the optimal allocation of consumption and effort in a dynamic setting with moral hazard where agents have secret access to the credit market or to storage. The recursive structure is based on a generalized first-order approach, whose validity must be verified ex post. Thanks to the recursive formulation of the optimal contract, the verification procedure turns out to be numerically parsimonious as it can be performed using standard dynamic programming techniques with only one endogenous state variable: The agent's level of assets. We study the performance of our ex post verification test in practice by solving numerically three representative infinite horizon examples. {\textcopyright} 2008 Elsevier Inc. All rights reserved.},
+author = {{\'{A}}brah{\'{a}}m, {\'{A}}rp{\'{a}}d and Pavoni, Nicola},
+doi = {10.1016/j.red.2008.05.001},
+file = {::},
+issn = {10942025},
+journal = {Review of Economic Dynamics},
+keywords = {Efficiency,Ex post verification,First-order approach,Hidden savings,Moral hazard,Recursive contracts},
+month = {oct},
+number = {4},
+pages = {781--803},
+publisher = {Academic Press},
+title = {{Efficient allocations with moral hazard and hidden borrowing and lending: A recursive formulation}},
+volume = {11},
+year = {2008}
+}
+
+@article{Chiappori2014,
+author = {Chiappori, Pierre-Andr{\'{e}} and Samphantharak, Krislert and Schulhofer-Wohl, Sam and Townsend, Robert M.},
+doi = {10.3982/QE131},
+file = {::},
+issn = {17597323},
+journal = {Quantitative Economics},
+keywords = {D12,D14,D53,D81,D91,G11,O16,Risk preferences,complete markets,heterogeneity,insurance},
+month = {mar},
+number = {1},
+pages = {1--27},
+publisher = {Wiley/Blackwell (10.1111)},
+title = {{Heterogeneity and risk sharing in village economies}},
+url = {http://doi.wiley.com/10.3982/QE131},
+volume = {5},
+year = {2014}
+}
+
+@incollection{Fafchamps2011,
+abstract = {This chapter reviews the literature identifying the different roles that family and kinship networks play in sharing risk. After a brief overview of efficient risk sharing, we discuss the channels by which households pool risk and the motives for entering in binding informal arrangements. Informal risk sharing arrangements are often thought to be enforced via reciprocal repeated relationships that are not family or kin specific. Other explanations draw from behavioral psychology and evolutionary biology and emphasize the link between gene transmission, family ties, and altruism. Next, we turn to the formation of risk sharing arrangements, either as partially overlapping networks or as risk sharing groups. We find that both types of arrangements often coexist and complement each other. The nature of strategic interactions among individuals and households has been shown to affect the stability of the resulting risk sharing equilibria. We finish with a discussion of the available evidence on strategic link and group formation. {\textcopyright} 2011 Elsevier B.V.},
+author = {Fafchamps, Marcel},
+booktitle = {Handbook of Social Economics},
+doi = {10.1016/B978-0-444-53707-2.00007-4},
+issn = {15706435},
+keywords = {Altruism,Mutual insurance,Risk pooling,Social networks},
+month = {jan},
+number = {1 B},
+pages = {1255--1279},
+publisher = {Elsevier B.V.},
+title = {{Risk sharing between households}},
+volume = {1},
+year = {2011}
+}
+
+@article{Krueger2011,
+abstract = {Can public income insurance through progressive income taxation improve the allocation of risk in an economy where private risk sharing is incomplete? The answer depends crucially on the fundamental friction that limits private risk sharing in the first place. If risk sharing is limited because insurance markets are missing for model-exogenous reasons (as in Bewley (1986) [8]) publicly provided risk sharing improves on the allocation of risk. If instead private insurance markets exist but their use is limited by limited enforcement (as in Kehoe and Levine (1993) [23]) then the provision of public insurance interacts with equilibrium private insurance, as, by providing risk sharing, the government affects the value of exclusion from private insurance markets and thus the enforcement mechanism of these contracts. We characterize consumption allocations in an economy with limited enforcement and a continuum of agents facing plausible income risk and tax systems with various degrees of progressivity (public risk sharing). We provide conditions under which more publicly provided insurance actually reduces total insurance for agents (excess crowding-out), or under which more public insurance increases total insurance (partial crowding-out). {\textcopyright} 2010 Elsevier Inc.},
+author = {Krueger, Dirk and Perri, Fabrizio},
+doi = {10.1016/j.jet.2010.08.013},
+file = {::},
+issn = {00220531},
+journal = {Journal of Economic Theory},
+keywords = {Incomplete markets,Insurance,Limited enforcement,Progressive taxation},
+month = {may},
+number = {3},
+pages = {920--956},
+publisher = {Academic Press},
+title = {{Public versus private risk sharing}},
+volume = {146},
+year = {2011}
+}
+
+@article{Udry1994,
+author = {Udry, Christopher},
+file = {:Users/mizuhirosuzuki/Library/Application Support/Mendeley Desktop/Downloaded/Udry - 1994 - Risk and Insurance in a Rural Credit Market An Empirical Investigation in North Nigeria.pdf:pdf},
+journal = {Review of Economic Studies},
+number = {3},
+pages = {495--526},
+title = {{Risk and Insurance in a Rural Credit Market: An Empirical Investigation in North Nigeria}},
+volume = {61},
+year = {1994}
+}
+
+@Inbook{Ligon2016,
+author="Ligon, Ethan",
+title="Risk Sharing",
+bookTitle="The New Palgrave Dictionary of Economics",
+year="2008",
+publisher="Palgrave Macmillan UK",
+address="London",
+pages="1--4",
+abstract="Agents increase their expected utility by using state-contingent transfers to share risk; many institutions seem to play an important role in permitting such transfers. If agents are suitably risk-averse, then in the absence of any frictions the benchmark Arrow--Debreu model predicts that all risk will be shared, so that idiosyncratic shocks will have no effect on individuals; we call this full risk sharing. Real-world tests of full risk sharing tend to reject it; accordingly, researchers have devised models incorporating various frictions to try to explain the partial risk sharing evident in the data.",
+isbn="978-1-349-95121-5",
+doi="10.1057/978-1-349-95121-5_2357-1",
+url="https://doi.org/10.1057/978-1-349-95121-5_2357-1"
+}
+
+@article{Schulhofer-Wohl2011,
+abstract = {How well do people share risk? Standard risk-sharing regressions assume that any variation in households' risk preferences is uncorrelated with variation in the cyclicality of income. I combine administrative and survey data to show that this assumption is questionable: Risktolerant workers hold jobs in which earnings carry more aggregate risk. The correlation makes risk-sharing regressions in the previous literature too pessimistic. I derive techniques that eliminate the bias, apply them to U.S. data, and find that the effect of idiosyncratic income shocks on consumption is practically small and statistically difficult to distinguish from zero. {\textcopyright} 2011 by The University of Chicago.},
+author = {Schulhofer-Wohl, Sam},
+doi = {10.1086/662720},
+issn = {00223808},
+journal = {Journal of Political Economy},
+title = {{Heterogeneity and tests of risk sharing}},
+year = {2011}
+}
+
+@unpublished{Genicot2006,
+author = {Genicot, Garance},
+file = {::},
+title = {{Does wealth inequality help informal insurance?}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.499.9348},
+year = {2006}
+}
+  
+@article{Thomas1988,
+  title={Self-enforcing wage contracts},
+  author={Thomas, Jonathan and Worrall, Tim},
+  journal={The Review of Economic Studies},
+  volume={55},
+  number={4},
+  pages={541--554},
+  year={1988},
+  publisher={Wiley-Blackwell}
+}
+
+
+@article{Baker2002,
+  title={Relational Contracts and the Theory of the Firm},
+  author={Baker, George and Gibbons, Robert and Murphy, Kevin J},
+  journal={The Quarterly Journal of Economics},
+  volume={117},
+  number={1},
+  pages={39--84},
+  year={2002},
+  publisher={MIT Press}
+}
+
+@article{Marcet2019,
+  title={Recursive contracts},
+  author={Marcet, Albert and Marimon, Ramon},
+  journal={Econometrica},
+  volume={87},
+  number={5},
+  pages={1589--1631},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{Laczo2014,
+  title={Does risk sharing increase with risk aversion and risk when commitment is limited?},
+  author={Lacz{\'o}, Sarolta},
+  journal={Journal of Economic Dynamics and Control},
+  volume={46},
+  pages={237--251},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{Ogaki2001,
+  title={Decreasing relative risk aversion and tests of risk sharing},
+  author={Ogaki, Masao and Zhang, Qiang},
+  journal={Econometrica},
+  volume={69},
+  number={2},
+  pages={515--526},
+  year={2001},
+  publisher={JSTOR}
+}
